src/tests/errors/25_void_in_expression/source.z42
namespace Demo;

void DoNothing() {
}

void Main() {
    var x = DoNothing();
}
